...
                    width = 672.dp,
                    height = 900.dp,
                ),
        ) {
            DialogBar(
                label = if (taskFormState.isUpdate) "기존 태스크 수정"
                else "새 태스크 생성",
                modifier = Modifier.padding(
                    vertical = 28.dp,
                    horizontal = 24.dp,
                )
                    .fillMaxWidth(),
            )
...
            Column(
                modifier = Modifier.padding(24.dp),
                verticalArrangement = Arrangement.spacedBy(24.dp),
            ) {
                CreateTextInput(
                    title = "제목 *",
                    placeHolder = "태스크 제목을 입력하세요",
                    height = 48.dp,
                    value = taskFormState.titleInputValue,
                    onChangeValue = { newTextValue ->
                        taskFormState.titleChange(newTextValue)
                    },
                    isError = taskFormState.isTitleError,
...
